fix(task-lists): regular expression matching for task list items containing extra spaces

--- a/assets/css/_core/_layout/_header.scss
+++ b/assets/css/_core/_layout/_header.scss
@@ -331,7 +331,7 @@ header {
 
     .menu {
       background-color: fixit-var(header-background-color);
-      border-top: 2px solid fixit-var(global-border-color);
+      border-top: 1px solid fixit-var(global-border-color);
       display: none;
       overflow-y: auto;
       max-height: 70vh;
